Heading and Footer Alignment Fixed

--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
-.header, .footer {
+body {
+    display: flex; 
+    flex-direction: column;
     font-family: Roboto;
+    margin: 0;
+}
+
+#content {
+    padding-left: 200px;
+    padding-right: 200px;
+}
+
+.header, .footer {
     background-color: #1F2937;
-    padding: 0 16px;
 }
 
 .header {
@@ -23,7 +33,6 @@
 
 .right {
     font-size: 18px;
-    
 }
 
 ul {
@@ -42,4 +51,5 @@ a {
 .footer {
     text-align: center;
     color: #E5E7EB;
+    padding: 30px;
 }
